--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <div class="jumbotron">
+     <form #form="ngForm" (ngSubmit)="submitForm(form.value)">
+    <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control" id="inputName" placeholder="Name" required>
+    </div>
+    <div class="form-group">
+        <label >Username</label>
+        <input type="text" class="form-control" id="inputUsername" placeholder="Username" required>
+    </div>
+    <div class="form-group">
+        <label >Email Id</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
+    </div>
+    <div class="form-group">
+        <label >Mobile No</label>
+        <input type="number" class="form-control" id="inputnum" placeholder="Mobile No." required>
+    </div>
+    <div class="form-group">
+        <label >Password</label>
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+    </div>
+    <div class="form-group">
+        <label >Re-Password</label>
+        <input type="password" class="form-control" id="inputRePassword" placeholder="Re-Password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+    </div>
+</div>
